<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela2">

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="399dp"
        android:layout_height="51dp"
        android:text="@string/tvTitulo2"
        android:textAlignment="center"
        android:textColor="#F43652"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <LinearLayout
        android:id="@+id/llFormulario"
        android:layout_width="348dp"
        android:layout_height="401dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etIdade"
            android:inputType="number" />

        <EditText
            android:id="@+id/etDataNasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etDadaNasc"
            android:inputType="date" />

        <TextView
            android:id="@+id/etEspecialidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etEspecialidades"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgEspecialidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbClinicoGeral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbClinicoGeral" />

            <RadioButton
                android:id="@+id/rbPediatra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbPediatra" />

            <RadioButton
                android:id="@+id/rbGeriatra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbGeriatra" />

        </RadioGroup>

        <EditText
            android:id="@+id/etHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etHora"
            android:inputType="time" />

        <EditText
            android:id="@+id/etDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etDia"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btNovoCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:backgroundTint="#E91E63"

        android:text="@string/btNovoCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llFormulario"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btNovoCadastro"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llFormulario"
        app:layout_constraintVertical_bias="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>